fixed navbar responsiveness on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -271,9 +271,15 @@ img {
   font-size: 0.95rem;
   color: var(--text-dark);
   /* color: var(--light-bg); */
-  padding: 8px 18px !important;
+  padding: 8px 18px;
   position: relative;
   transition: var(--transition);
+}
+
+@media screen and (min-width:1024px) {
+  .navbar .nav-link {
+    padding: 4px 18px !important;
+  }
 }
 
 
@@ -1847,33 +1853,37 @@ img {
   box-shadow: 0 0 0 4px rgba(47, 148, 219, 0.1);
 }
 
-.contact-form-side .form-floating > label {
+.contact-form-side .form-floating>label {
   color: #8c98a4;
   padding-left: 15px;
 }
 
-.contact-form-side .form-floating > .form-control:focus ~ label,
-.contact-form-side .form-floating > .form-control:not(:placeholder-shown) ~ label {
+.contact-form-side .form-floating>.form-control:focus~label,
+.contact-form-side .form-floating>.form-control:not(:placeholder-shown)~label {
   color: var(--gold);
   opacity: 0.8;
 }
 
 @media (max-width: 991.98px) {
-  .contact-info-side, .contact-form-side {
+
+  .contact-info-side,
+  .contact-form-side {
     padding: 40px;
   }
 }
 
 @media (max-width: 767.98px) {
-  .contact-info-side, .contact-form-side {
+
+  .contact-info-side,
+  .contact-form-side {
     padding: 30px 20px;
   }
-  
+
   .contact-info-side .info-item {
     gap: 15px;
     margin-bottom: 25px;
   }
-  
+
   .contact-info-side .icon-box {
     min-width: 40px;
     height: 40px;
@@ -2270,4 +2280,46 @@ img {
 .inquiry-title h3 {
   color: white;
   font-weight: 700;
+}
+
+
+@media screen and (max-width:991px) {
+  .show-dropownd-mobile {
+    display: block !important;
+  }
+
+  .nav-item {
+    width: 100%;
+    border-bottom: 1px solid #ebeaea;
+    /* padding-bottom: 10px; */
+  }
+
+  .drop-down-links li {
+    border-bottom: 1px solid #ebeaea;
+  }
+
+  .nav-item:last-child,
+  .drop-down-links li:last-child {
+    border-bottom: none;
+  }
+
+  .nav-item .nav-link {
+    padding: 10px 15px;
+    text-align: start;
+  }
+
+  /* .navbar-nav .nav-link {
+    padding: 10px 15px;
+  } */
+  .navbar .nav-link::after {
+    position: static;
+  }
+
+  .drop-down-links li a {
+    padding: 8px;
+  }
+
+  .navbar .nav-link {
+    padding: 8px;
+  }
 }
